@@ -2,6 +2,7 @@ package network
 
 import (
 	"fmt"
+	"github.com/ethereum/eth2-client-tests/tester/report"
 	"log"
 
 	"github.com/ethereum/eth2-client-tests/tester/docker"
@@ -19,6 +20,7 @@ var (
 		Flags: []cli.Flag{
 			TestnetName,
 			Port,
+			TestOutputFile,
 		},
 	}
 )
@@ -27,13 +29,30 @@ func touchNetwork(ctx *cli.Context) {
 	testNet := ctx.String(TestnetName.Name)
 	port := ctx.Int(Port.Name)
 	nodes := genesis.GetNodes(testNet)
+	reports := []report.TestReport{}
+	completeStdout := ""
+	completeStderr := ""
+	fail := false
 	for _, node := range nodes {
 		stdout, stderr, err := docker.Exec(fmt.Sprintf("whiteblock-node%d", node.LocalId), []string{"lsof", "-i", fmt.Sprintf(":%d", port)})
 		//stdout, stderr, err  := docker.ExecScript(fmt.Sprintf("whiteblock-node%d", node.LocalId), "network.sh", testNetwork, "bash network.sh")
-		fmt.Printf("STDOUT: %s", stdout)
-		fmt.Printf("STDERR: %s", stderr)
-		if err != nil {
-			log.Fatal("Error connecting to network: ", err)
+		completeStdout += stdout
+		completeStderr += stderr
+		fail = fail || err != nil
+		reports = append(reports, report.TestReport{Name: fmt.Sprintf("whiteblock-node%d up", node.LocalId),
+			Message: "",
+			Failed:  err != nil,
+			Logs:    fmt.Sprintf("%v", err)})
+	}
+
+	testReportOutput := ctx.String(TestOutputFile.Name)
+	if testReportOutput != "" {
+		report.WriteReport("network-up", reports, completeStdout, completeStderr, testReportOutput)
+	} else {
+		fmt.Printf("STDOUT: %s", completeStdout)
+		fmt.Printf("STDERR: %s", completeStderr)
+		if fail {
+			log.Fatal("Error connecting to network ")
 		}
 	}
 }
